--- a/templates/application/application.edit.twig
+++ b/templates/application/application.edit.twig
@@ -41,8 +41,7 @@
 
                 <li>
                     <h3 class="zeta label">Github Source</h3>
-                    <a href="{{ githubRepo(application.githubUser, application.githubRepo) }}">{{ application.githubUser }}/{{ application.githubRepo }}</a>
-                    {{ macros.icon('github') }}
+                    {{ macros.gitsource(application) }}
                     <small class="additional">Please contact a HAL administrator to change this setting.</small>
                 </li>
 
