--- a/templates/push/start.twig
+++ b/templates/push/start.twig
@@ -28,7 +28,7 @@
 
             <dt class="split__title">Reference</dt>
             <dd>
-                {% if githubCommitIsCurrent(build.application.githubUser, build.application.githubRepo, build.branch, build.commit) %}
+                {% if githubCommitIsCurrent(build.application.githubOwner, build.application.githubRepo, build.branch, build.commit) %}
                     {{ macros.status_icon(macros.gitref(build), 'success') }}
                 {% else %}
                     {{ macros.status_icon(macros.gitref(build), 'other') }}
@@ -94,7 +94,7 @@
                             {% set active = inProgress ? status.latest : status.success %}
 
                             <td>
-                                {% if githubCommitIsCurrent(build.application.githubUser, build.application.githubRepo, active.build.branch, active.build.commit) %}
+                                {% if githubCommitIsCurrent(build.application.githubOwner, build.application.githubRepo, active.build.branch, active.build.commit) %}
                                     {{ macros.status_icon(macros.gitref(active.build, true), 'success') }}
                                 {% else %}
                                     {{ macros.status_icon(macros.gitref(active.build, true), 'other') }}
