--- a/templates/user/user.twig
+++ b/templates/user/user.twig
@@ -8,6 +8,7 @@
 {% set page_title = 'User : ' ~ name %}
 
 {% set isAdmin = isUserAdminOrSuper(currentUser) %}
+{% set isSuper = isUserSuper(currentUser) %}
 
 {% block content %}
 
