--- a/templates/kraken/environments.twig
+++ b/templates/kraken/environments.twig
@@ -5,7 +5,7 @@
 {% set isAdmin = isUserSuper(currentUser) %}
 
 {% block content %}
-    <h1>Environments</h1>
+    <h1>{{ page_title }}</h1>
 
     {% if environments %}
         <table class="table--spacing-medium" data-tablesaw-mode="stack">
