--- a/templates/kraken/configuration/snapshot.twig
+++ b/templates/kraken/configuration/snapshot.twig
@@ -1,7 +1,7 @@
 {% extends 'base.kraken.twig' %}
 {% import "_partial/macros.twig" as macros %}
 
-{% set page_title = is_deployed ? 'Deployed Snapshot' : 'Snapshot' %}
+{% set page_title = is_deployed ? 'Deployed Snapshot' : 'Configuration Snapshot' %}
 
 {% block content %}
 
