--- a/templates/kraken/configuration/rollback.twig
+++ b/templates/kraken/configuration/rollback.twig
@@ -17,18 +17,17 @@
     {% include 'kraken/_partial/configuration.status.twig' %}
 
     <h2>Verify Rollback</h2>
-    {% include 'kraken/_partial/configuration.comparison.twig' with({diff_left: 'Active', diff_right: 'Rollback'}) %}
+    {% include 'kraken/_partial/configuration.comparison.twig' with {diff_left: 'Active', diff_right: 'Rollback'} %}
 
     {{ block('lets_do_this') }}
 {% endblock %}
 
 {% block lets_do_this %}
 
-    <form method="post">
+    <form class="form-wrapper" method="post">
         <ul class="button-list">
             <li><input type="submit" class="btn btn--action" value="Rollback Configuration"></li>
-            <li><a class="btn" href="{{ urlFor('kraken.configuration', {application: application.id}) }}">Application Configuration</a></li>
-            <li><a class="btn btn--secondary" href="{{ urlFor('kraken.configuration', {application: application.id}) }}">Cancel</a></li>
+            <li class="button-list__fixed"><a class="btn btn--secondary" href="{{ urlFor('kraken.configuration', {configuration: configuration.id}) }}">Cancel</a></li>
         </ul>
     </form>
 
