Add kraken audit log viewing

--- a/templates/admin/audit.logs.twig
+++ b/templates/admin/audit.logs.twig
@@ -11,7 +11,7 @@
     <table class="table--spacing-medium" data-tablesaw-mode="stack">
         <thead>
             <tr>
-                <th>Date</th>
+                <th>Time</th>
                 <th>User</th>
                 <th>Action</th>
                 <th>Object</th>
