Clean up PR build box, streamline behind/latest refs

--- a/sass/app/_icons.scss
+++ b/sass/app/_icons.scss
@@ -41,3 +41,12 @@
     background: $info-color;
     padding: 4px;
 }
+
+.icon--warning {
+    color: $warning-color;
+}
+.icon--warning-inverse {
+    color: $white;
+    background: $warning-color;
+    padding: 4px;
+}
