--- a/sass/style.scss
+++ b/sass/style.scss
@@ -40,7 +40,7 @@
 @import "app/hal-header";
 @import "app/help";
 @import "app/icons";
-@import "app/pr";
+@import "app/github";
 @import "app/radio-grid";
 @import "app/search";
 @import "app/tabs";
