--- a/templates/push/push.twig
+++ b/templates/push/push.twig
@@ -67,11 +67,8 @@
 
             <dt class="split__title">Reference</dt>
             <dd>
-                {% if githubCommitIsCurrent(push.application.githubOwner, push.application.githubRepo, push.build.branch, push.build.commit) %}
-                    {{ macros.status_icon(macros.gitref(push.build) ~ ' (latest)', 'success') }}
-                {% else %}
-                    {{ macros.status_icon(macros.gitref(push.build) ~ ' (behind)', 'other') }}
-                {% endif %}
+                {% set isCurrent = githubCommitIsCurrent(push.application.githubOwner, push.application.githubRepo, push.build.branch, push.build.commit) %}
+                {{ macros.gitref(push.build, false, isCurrent) }}
             </dd>
 
             <dt class="split__title">Commit</dt>
